separando as responsabilidades de roles, criando uma tabela própria